[project]
name = "interpark"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = [
    "selenium>=4.26.1",
    "beautifulsoup4>=4.12.3",
    "webdriver-manager>=4.0.2",
    "pymongo>=4.10.1",
    "apache-airflow-providers-amazon>=9.1.0",
    "chromedriver-autoinstaller>=0.6.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
