[project]
name = "interpark"
version = "0.2.1"
description = "Default template for PDM package"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = [
    "selenium>=4.26.1",
    "beautifulsoup4>=4.12.3",
    "webdriver-manager>=4.0.2",
    "apache-airflow-providers-amazon>=9.1.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
